GNU coreutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]


* Noteworthy changes in release 9.10 (2026-02-04) [stable]

** Bug fixes

  cp, install, and mv no longer enter an infinite loop copying sparse files
  with SEEK_HOLE.  E.g., this was seen on ext4 when copying sparse files with
  extents that are being actively updated, and copy offload is not being used.
  [bug introduced in coreutils-9.9]

  'date' no longer fails with format directives that return an empty string.
  [bug introduced in coreutils-9.9]

  'dd seek=N of=FILE' no longer continues copying, overwriting FILE if it
  exists, if ftruncate fails.
  [bug introduced in coreutils-9.1]

  du and ls no longer modify strings returned by getenv.
  POSIX says this is not portable.
  [bug introduced in fileutils-4.1.6]

  'fmt' now correctly diagnoses read errors.
  Previously fmt generated a generic error for any read error.
  [bug introduced in coreutils-9.0]

  md5sum --text correctly translates CRLF line endings with the MSYS2 runtime.
  This also applies to the sha*sum and b2sum utilities.
  [This bug was present in "the beginning".]

  'numfmt' no longer drops custom suffixes from numbers it cannot fully parse.
  [bug introduced with numfmt in coreutils-8.21]

  'tail -f --pid' can no longer exit upon receiving a non terminating signal.
  On older Linux systems it may have failed with "Interrupted system call".
  [bug introduced in coreutils-7.5]

  'timeout' will now propagate all terminating signals to the monitored command.
  Previously 'timeout' could have exited and left the monitored command running.
  [bug introduced with timeout in coreutils-7.0]

  wc now documents its --debug option, currently used to
  indicate the line count acceleration being used.
  [bug introduced in coreutils-9.0]

  When built with `clang -fno-inline`, memory allocation issues are again